samples/_failures_safe/1761085373_d7d6de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_773990c4.c: In function ‘main’:
./samples/SAFE/__tmp_773990c4.c:157:17: error: expected declaration or statement at end of input
  157 |                 if (multiply_matrices(&a, &b, &result)) {
      |                 ^~
./samples/SAFE/__tmp_773990c4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_773990c4.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_773990c4.c:157:17: error: expected declaration or statement at end of input
